[gd_scene load_steps=8 format=3 ]

[ext_resource type="PackedScene"  path="res://Addings/Cars/Player.tscn" id="1"]
[ext_resource type="Script" path="res://MainScene.gd" id="2"]
[ext_resource type="FontFile"  path="res://fonts/ShareTechCyr.ttf" id="4_7wqwy"]
[ext_resource type="AudioStream"  path="res://art/Sounds/loops/intro_1.mp3" id="5_gm17i"]
[ext_resource type="PackedScene"  path="res://Addings/Cars/proc_gen_world.tscn" id="6_t37np"]
[ext_resource type="PackedScene"  path="res://Addings/Cars/NPC.tscn" id="7_3qrdf"]
[ext_resource type="PackedScene"  path="res://Addings/Farts/FartsScene.tscn" id="7_k7xk5"]

[node name="Main" type="Node2D"]
script = ExtResource("2")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1")]
z_index = 500
position = Vector2(0, 176)

[node name="NPC" parent="." instance=ExtResource("7_3qrdf")]
z_index = 500
position = Vector2(0, 308)

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Canvas/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_7wqwy")
theme_override_font_sizes/font_size = 24
text = "Text line 1
Text line 2"

[node name="AudioPlayer" type="AudioStreamPlayer" parent="Canvas"]
stream = ExtResource("5_gm17i")
autoplay = true

[node name="proc_gen_world" parent="." instance=ExtResource("6_t37np")]
process_priority = 2
process_thread_group = 2
process_thread_group_order = 2
process_thread_messages = 0
editor_description = "
Process Priority 2 (less)
Thread Group Order 2 (less)"

[node name="FartsScene" parent="." instance=ExtResource("7_k7xk5")]

[connection signal="set_draw_timer" from="Player" to="." method="_on_Player_set_draw_timer"]
[connection signal="set_hud" from="Player" to="." method="_on_Player_set_hud"]
[connection signal="set_draw_timer" from="NPC" to="." method="_on_npc_set_draw_timer"]
